objects/Expense_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contributed_Amount__c</fullName>
        <label>Contributed Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMember__c</fullName>
        <label>EMember</label>
        <referenceTo>EMember__c</referenceTo>
        <relationshipLabel>ExpenseMembers</relationshipLabel>
        <relationshipName>ExpenseMembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>ExpenseMembers</relationshipLabel>
        <relationshipName>ExpenseMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Emid-{0000}</displayFormat>
        <label>Expense Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExpenseMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>